--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ GOOGLE_CLIENT_SECRET=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
 # Database
 # ------------------------
 
-DATABASE_URL=mysql://an3pw1zj0fjo0q6nuqbf:pscale_pw_gOHCxZRHWTodivuRLQq5kmnAoRDDbYz2HpeX9H5tuom@aws.connect.psdb.cloud/similarity?sslaccept=strict
+DATABASE_URL=mysql://3mfadzn29qasi7e6ko7y:pscale_pw_KsKEKuk2FyYtC69lpZUwLKXcjZDlOBOVQIBT9w8cEk8@aws.connect.psdb.cloud/similarity?sslaccept=strict
 
 # ------------------------
 # OpenAI
